fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+*, *::before, *::after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+
 body{
   background:
   linear-gradient(to bottom left,transparent 49.8%,#E0E6E5 50%) top   /100% 35%,
@@ -5,13 +12,14 @@ body{
   linear-gradient(#E0E6E5,#E0E6E5) center/100% 30%;
   background-repeat:no-repeat;
   background-color: rgb(219, 235, 240);
+  overflow: visible;
+  max-width: 100%;
 }
 
 .App {
- text-align: center;
- margin: 0%;
- padding: 0;
- font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  
 }
 
 
@@ -36,13 +44,17 @@ body{
 
 /* Header */
 #header{
-  width: 100%;
+  max-width: 100%;
   height: 45vh;
   background-position: top;
   background-size: cover;
   position: relative;
   margin: 0;
   /* margin-bottom: -15px; */
+}
+
+.banner{
+  max-width: 100%;
 }
 
 .banner-text{
@@ -112,6 +124,11 @@ body{
 
 /* videos */
 
+
+#videos {
+  padding: 0 10vw;
+}
+
 .video_containter{
   width: 100%;
 }
@@ -133,7 +150,8 @@ body{
   padding: 0;
 }
 #videoTitle > h1 {
-  background: rgb(229, 243, 30);;
+  background: rgb(229, 243, 30);
+  /* background: rgb(208, 140, 247); */
   color: navy;
   padding: 4vh 0 2vh 0;
   font-size: 2.5vh;
@@ -151,17 +169,18 @@ body{
 
 .flashcard_container{
   width: 100%;
-  margin-bottom: 4vh;
+  margin: 8vh 0;
 }
 
 #flashcard_video{
-  width: 20%;
-  margin: 3vh 0 0 16vh;
+  width: 27%;
+  margin: 3vh 0 0 25vh;
 }
 
 
 .flashcard_text {
  margin: auto;
+ width: 40%;
 }
 
 
@@ -193,7 +212,7 @@ body{
 
 /* twitter */
 #twitterContainer{
-  margin-bottom: 8vh;
+  margin: 8vh 0;
 }
 #twitterContainer > h1 {
   width: 100%;
